--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -22,5 +22,9 @@ services:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
       - ../frontend/build:/usr/share/nginx/html/
       - ../docs/:/usr/share/nginx/html/api/docs/
+      - static_value:/var/html/static/
+      - media_value:/var/html/media/
 volumes:
   postgres_data:
+  static_value:
+  media_value:
