--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -1,17 +1,59 @@
-version: '3.3'
+#version: '3.3'
+#services:
+#  db:
+#    image: postgres:13.3-alpine
+#    env_file:
+#      - ../.env
+#    ports:
+#      - "5432:5432"
+#    volumes:
+#      - postgres_data:/var/lib/postgresql/data/
+#  backend:
+#    build:
+#      context: ../backend
+#      dockerfile: Dockerfile
+#    restart: always
+#    volumes:
+#      - static_value:/app/static/
+#      - media_value:/app/media/
+#    depends_on:
+#      - db
+#    env_file:
+#      - ../.env
+#  frontend:
+#    build:
+#      context: ../frontend
+#      dockerfile: Dockerfile
+#    volumes:
+#      - ../frontend/:/app/result_build/
+#  nginx:
+#    image: nginx:1.19.3
+#    ports:
+#      - "80:80"
+#    volumes:
+#      - ./nginx.conf:/etc/nginx/conf.d/default.conf
+#      - ../frontend/build:/usr/share/nginx/html/
+#      - ../docs/:/usr/share/nginx/html/api/docs/
+#      - static_value:/var/html/static/
+#      - media_value:/var/html/media/
+#volumes:
+#  postgres_data:
+#  static_value:
+#  media_value:
+
+
+version: '3.8'
 services:
   db:
-    image: postgres:13.3-alpine
-    env_file:
-      - ../.env
-    ports:
-      - "5432:5432"
+    image: postgres:14.5-alpine
+    restart: always
     volumes:
-      - postgres_data:/var/lib/postgresql/data/
-  backend:
-    build:
-      context: ../backend
-      dockerfile: Dockerfile
+      - /var/lib/postgresql/data/
+    env_file:
+      - ./.env
+
+  web:
+    build: ../backend
     restart: always
     volumes:
       - static_value:/app/static/
@@ -19,13 +61,17 @@ services:
     depends_on:
       - db
     env_file:
-      - ../.env
+      - ./.env
+
   frontend:
     build:
       context: ../frontend
       dockerfile: Dockerfile
     volumes:
       - ../frontend/:/app/result_build/
+    depends_on:
+      - web
+
   nginx:
     image: nginx:1.19.3
     ports:
@@ -36,7 +82,9 @@ services:
       - ../docs/:/usr/share/nginx/html/api/docs/
       - static_value:/var/html/static/
       - media_value:/var/html/media/
+    depends_on:
+      - frontend
+
 volumes:
-  postgres_data:
   static_value:
   media_value:
