--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -1,6 +1,7 @@
 server {
     listen 80;
-    server_name 127.0.0.1, localhost;
+    server_name 158.160.8.160 localhost;
+    server_tokens off;
     location /static/admin/ {
         root /var/html/;
     }
