--- a/.github/workflows/foodgram_workflow.yml
+++ b/.github/workflows/foodgram_workflow.yml
@@ -116,15 +116,15 @@ jobs:
             push: true
             context: ./backend
             file: ./backend/Dockerfile
-            tags: ${{ secrets.DOCKER_USERNAME }}/foodgram-project:latest
+            tags: ${{ secrets.DOCKER_USERNAME }}/foodgram:latest
 
-        - name: Push frontend to Docker Hub
-          uses: docker/build-push-action@v2
-          with:
-            push: true
-            context: ./frontend
-            file: ./frontend/Dockerfile
-            tags: ${{ secrets.DOCKER_USERNAME }}/foodgram-frontend:latest
+#        - name: Push frontend to Docker Hub
+#          uses: docker/build-push-action@v2
+#          with:
+#            push: true
+#            context: ./frontend
+#            file: ./frontend/Dockerfile
+#            tags: ${{ secrets.DOCKER_USERNAME }}/foodgram:latest
 
   deploy:
     runs-on: ubuntu-latest
