--- a/.github/workflows/foodgram_workflow.yml
+++ b/.github/workflows/foodgram_workflow.yml
@@ -62,8 +62,8 @@
 #          sudo docker-compose stop
 #          sudo docker-compose rm -f web
 #          sudo docker rmi $(sudo docker images '${{ secrets.DOCKER_USERNAME }}/foodgram' -q)
-#          rm .env -f
-#          touch .env
+#          sudo rm .env -f
+#          sudo touch .env
 #          echo DB_ENGINE=${{ secrets.DB_ENGINE }} >> .env
 #          echo DB_NAME=${{ secrets.DB_NAME }} >> .env
 #          echo POSTGRES_USER=${{ secrets.POSTGRES_USER }} >> .env
@@ -137,6 +137,7 @@ jobs:
           host: ${{ secrets.HOST }}
           username: ${{ secrets.USER }}
           key: ${{ secrets.SSH_KEY }}
+          passphrase: ${{ secrets.PASSPHRASE }}
           script: |
             sudo docker-compose stop
             sudo docker-compose rm web
