--- a/.github/workflows/foodgram_workflow.yml
+++ b/.github/workflows/foodgram_workflow.yml
@@ -1,80 +1,8 @@
-#name: foodgram_workflow
-#
-#on:
-#  push:
-#    branches: [ "master" ]
-#
-#jobs:
-#  tests:
-#    runs-on: ubuntu-latest
-#
-#    steps:
-#    - uses: actions/checkout@v2
-#    - name: Set up Python
-#      uses: actions/setup-python@v2
-#      with:
-#        python-version: 3.8
-#
-#    - name: Install dependencies
-#      run: |
-#        python -m pip install --upgrade pip
-#        pip install flake8 pep8-naming flake8-broken-line flake8-return flake8-isort
-#        pip install -r ./backend/requirements.txt
-#    - name: Test with flake8 and django tests
-#      run: |
-#        cat setup.cfg
-#        python -m flake8 ./backend
-#        python ./backend/manage.py check
-#
-#  build_and_push_to_docker_hub:
-#    name: Push Docker image to Docker Hub
-#    runs-on: ubuntu-latest
-#    needs: tests
-#    steps:
-#      - name: Check out the repo
-#        uses: actions/checkout@v2
-#      - name: Set up Docker Buildx
-#        uses: docker/setup-buildx-action@v1
-#      - name: Login to Docker
-#        uses: docker/login-action@v1
-#        with:
-#          username: ${{ secrets.DOCKER_USERNAME }}
-#          password: ${{ secrets.DOCKER_PASSWORD }}
-#      - name: Push to Docker Hub
-#        uses: docker/build-push-action@v2
-#        with:
-#          context: ./backend/
-#          push: true
-#          tags: ${{ secrets.DOCKER_USERNAME }}/foodgram:latest
-#
-#  deploy:
-#    runs-on: ubuntu-latest
-#    needs: build_and_push_to_docker_hub
-#    steps:
-#    - name: executing remote ssh commands to deploy
-#      uses: appleboy/ssh-action@master
-#      with:
-#        host: ${{ secrets.HOST }}
-#        username: ${{ secrets.USER }}
-#        key: ${{ secrets.SSH_KEY }}
-#        passphrase: ${{ secrets.PASSPHRASE }}
-#        script: |
-#          sudo docker-compose stop
-#          sudo docker-compose rm -f web
-#          sudo docker rmi $(sudo docker images '${{ secrets.DOCKER_USERNAME }}/foodgram' -q)
-#          sudo rm .env -f
-#          sudo touch .env
-#          echo DB_ENGINE=${{ secrets.DB_ENGINE }} >> .env
-#          echo DB_NAME=${{ secrets.DB_NAME }} >> .env
-#          echo POSTGRES_USER=${{ secrets.POSTGRES_USER }} >> .env
-#          echo POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }} >> .env
-#          echo DB_HOST=${{ secrets.DB_HOST }} >> .env
-#          echo DB_PORT=${{ secrets.DB_PORT }} >> .env
-#          sudo docker-compose up -d
-
 name: foodgram_workflow
 
-on: [push]
+on:
+  push:
+    branches: [ "master" ]
 
 jobs:
   tests:
@@ -90,62 +18,134 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install flake8 pep8-naming flake8-broken-line flake8-return
-        pip install -r backend/requirements.txt
+        pip install flake8 pep8-naming flake8-broken-line flake8-return flake8-isort
+        pip install -r ./backend/requirements.txt
     - name: Test with flake8 and django tests
       run: |
-        python -m flake8
+        cat setup.cfg
+        python -m flake8 ./backend
+        python ./backend/manage.py check
+
   build_and_push_to_docker_hub:
-      name: Push Docker images to Docker Hub
-      runs-on: ubuntu-latest
-      needs: tests
-      steps:
-        - name: Check out the repo
-          uses: actions/checkout@v2
-        - name: Set up Docker Buildx
-          uses: docker/setup-buildx-action@v1
-        - name: Login to Docker
-          uses: docker/login-action@v1
-          with:
-            username: ${{ secrets.DOCKER_USERNAME }}
-            password: ${{ secrets.DOCKER_PASSWORD }}
-
-        - name: Push backend to Docker Hub
-          uses: docker/build-push-action@v2
-          with:
-            push: true
-            context: ./backend
-            file: ./backend/Dockerfile
-            tags: ${{ secrets.DOCKER_USERNAME }}/foodgram-project:latest
-
-        - name: Push frontend to Docker Hub
-          uses: docker/build-push-action@v2
-          with:
-            push: true
-            context: ./frontend
-            file: ./frontend/Dockerfile
-            tags: ${{ secrets.DOCKER_USERNAME }}/foodgram-frontend:latest
+    name: Push Docker image to Docker Hub
+    runs-on: ubuntu-latest
+    needs: tests
+    steps:
+      - name: Check out the repo
+        uses: actions/checkout@v2
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+      - name: Login to Docker
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Push to Docker Hub
+        uses: docker/build-push-action@v2
+        with:
+          context: ./backend/
+          push: true
+          tags: ${{ secrets.DOCKER_USERNAME }}/foodgram:latest
 
   deploy:
     runs-on: ubuntu-latest
     needs: build_and_push_to_docker_hub
-    if: github.ref == 'refs/heads/master'
     steps:
-      - name: executing remote ssh commands to deploy
-        uses: appleboy/ssh-action@master
-        with:
-          host: ${{ secrets.HOST }}
-          username: ${{ secrets.USER }}
-          key: ${{ secrets.SSH_KEY }}
-          passphrase: ${{ secrets.PASSPHRASE }}
-          script: |
-            sudo docker compose stop
-            sudo docker compose rm web
-            touch .env
-            echo DB_ENGINE=${{ secrets.DB_ENGINE }} > .env
-            echo DB_NAME=${{ secrets.DB_NAME }} >> .env
-            echo POSTGRES_USER=${{ secrets.POSTGRES_USER }} >> .env
-            echo POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }} >> .env
-            echo DB_HOST=${{ secrets.DB_HOST }} >> .env
-            echo DB_PORT=${{ secrets.DB_PORT }} >> .env
-            sudo docker compose up -d --build
+    - name: executing remote ssh commands to deploy
+      uses: appleboy/ssh-action@master
+      with:
+        host: ${{ secrets.HOST }}
+        username: ${{ secrets.USER }}
+        key: ${{ secrets.SSH_KEY }}
+        passphrase: ${{ secrets.PASSPHRASE }}
+        script: |
+          sudo docker-compose stop
+          sudo docker-compose rm -f web
+          sudo docker rmi $(sudo docker images '${{ secrets.DOCKER_USERNAME }}/foodgram' -q)
+          sudo rm .env -f
+          sudo touch .env
+          echo DB_ENGINE=${{ secrets.DB_ENGINE }} >> .env
+          echo DB_NAME=${{ secrets.DB_NAME }} >> .env
+          echo POSTGRES_USER=${{ secrets.POSTGRES_USER }} >> .env
+          echo POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }} >> .env
+          echo DB_HOST=${{ secrets.DB_HOST }} >> .env
+          echo DB_PORT=${{ secrets.DB_PORT }} >> .env
+          sudo docker-compose up -d
+
+#name: foodgram_workflow
+#
+#on: [push]
+#
+#jobs:
+#  tests:
+#    runs-on: ubuntu-latest
+#
+#    steps:
+#    - uses: actions/checkout@v2
+#    - name: Set up Python
+#      uses: actions/setup-python@v2
+#      with:
+#        python-version: 3.8
+#
+#    - name: Install dependencies
+#      run: |
+#        python -m pip install --upgrade pip
+#        pip install flake8 pep8-naming flake8-broken-line flake8-return
+#        pip install -r backend/requirements.txt
+#    - name: Test with flake8 and django tests
+#      run: |
+#        python -m flake8
+#  build_and_push_to_docker_hub:
+#      name: Push Docker images to Docker Hub
+#      runs-on: ubuntu-latest
+#      needs: tests
+#      steps:
+#        - name: Check out the repo
+#          uses: actions/checkout@v2
+#        - name: Set up Docker Buildx
+#          uses: docker/setup-buildx-action@v1
+#        - name: Login to Docker
+#          uses: docker/login-action@v1
+#          with:
+#            username: ${{ secrets.DOCKER_USERNAME }}
+#            password: ${{ secrets.DOCKER_PASSWORD }}
+#
+#        - name: Push backend to Docker Hub
+#          uses: docker/build-push-action@v2
+#          with:
+#            push: true
+#            context: ./backend
+#            file: ./backend/Dockerfile
+#            tags: ${{ secrets.DOCKER_USERNAME }}/foodgram-project:latest
+#
+#        - name: Push frontend to Docker Hub
+#          uses: docker/build-push-action@v2
+#          with:
+#            push: true
+#            context: ./frontend
+#            file: ./frontend/Dockerfile
+#            tags: ${{ secrets.DOCKER_USERNAME }}/foodgram-frontend:latest
+#
+#  deploy:
+#    runs-on: ubuntu-latest
+#    needs: build_and_push_to_docker_hub
+#    if: github.ref == 'refs/heads/master'
+#    steps:
+#      - name: executing remote ssh commands to deploy
+#        uses: appleboy/ssh-action@master
+#        with:
+#          host: ${{ secrets.HOST }}
+#          username: ${{ secrets.USER }}
+#          key: ${{ secrets.SSH_KEY }}
+#          passphrase: ${{ secrets.PASSPHRASE }}
+#          script: |
+#            sudo docker compose stop
+#            sudo docker compose rm web
+#            touch .env
+#            echo DB_ENGINE=${{ secrets.DB_ENGINE }} > .env
+#            echo DB_NAME=${{ secrets.DB_NAME }} >> .env
+#            echo POSTGRES_USER=${{ secrets.POSTGRES_USER }} >> .env
+#            echo POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }} >> .env
+#            echo DB_HOST=${{ secrets.DB_HOST }} >> .env
+#            echo DB_PORT=${{ secrets.DB_PORT }} >> .env
+#            sudo docker compose up -d --build
