--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -1,59 +1,13 @@
-#version: '3.3'
-#services:
-#  db:
-#    image: postgres:13.3-alpine
-#    env_file:
-#      - ../.env
-#    ports:
-#      - "5432:5432"
-#    volumes:
-#      - postgres_data:/var/lib/postgresql/data/
-#  backend:
-#    build:
-#      context: ../backend
-#      dockerfile: Dockerfile
-#    restart: always
-#    volumes:
-#      - static_value:/app/static/
-#      - media_value:/app/media/
-#    depends_on:
-#      - db
-#    env_file:
-#      - ../.env
-#  frontend:
-#    build:
-#      context: ../frontend
-#      dockerfile: Dockerfile
-#    volumes:
-#      - ../frontend/:/app/result_build/
-#  nginx:
-#    image: nginx:1.19.3
-#    ports:
-#      - "80:80"
-#    volumes:
-#      - ./nginx.conf:/etc/nginx/conf.d/default.conf
-#      - ../frontend/build:/usr/share/nginx/html/
-#      - ../docs/:/usr/share/nginx/html/api/docs/
-#      - static_value:/var/html/static/
-#      - media_value:/var/html/media/
-#volumes:
-#  postgres_data:
-#  static_value:
-#  media_value:
-
-
-version: '3.8'
+version: '3.3'
 services:
   db:
-    image: postgres:14.5-alpine
-    restart: always
-    volumes:
-      - /var/lib/postgresql/data/
+    image: postgres:13.3-alpine
     env_file:
-      - ./.env
-
-  web:
-    build: ../backend
+      - ../.env
+    volumes:
+      - postgres_data:/var/lib/postgresql/data/
+  backend:
+    image: booshic/foodgram:v1
     restart: always
     volumes:
       - static_value:/app/static/
@@ -61,17 +15,13 @@ services:
     depends_on:
       - db
     env_file:
-      - ./.env
-
+      - ../.env
   frontend:
     build:
       context: ../frontend
       dockerfile: Dockerfile
     volumes:
       - ../frontend/:/app/result_build/
-    depends_on:
-      - web
-
   nginx:
     image: nginx:1.19.3
     ports:
@@ -83,8 +33,57 @@ services:
       - static_value:/var/html/static/
       - media_value:/var/html/media/
     depends_on:
+      - backend
       - frontend
-
 volumes:
+  postgres_data:
   static_value:
   media_value:
+
+
+#version: '3.8'
+#services:
+#  db:
+#    image: postgres:14.5-alpine
+#    restart: always
+#    volumes:
+#      - /var/lib/postgresql/data/
+#    env_file:
+#      - ./.env
+#
+#  web:
+#    build: ../backend
+#    restart: always
+#    volumes:
+#      - static_value:/app/static/
+#      - media_value:/app/media/
+#    depends_on:
+#      - db
+#    env_file:
+#      - ./.env
+#
+#  frontend:
+#    build:
+#      context: ../frontend
+#      dockerfile: Dockerfile
+#    volumes:
+#      - ../frontend/:/app/result_build/
+#    depends_on:
+#      - web
+#
+#  nginx:
+#    image: nginx:1.19.3
+#    ports:
+#      - "80:80"
+#    volumes:
+#      - ./nginx.conf:/etc/nginx/conf.d/default.conf
+#      - ../frontend/build:/usr/share/nginx/html/
+#      - ../docs/:/usr/share/nginx/html/api/docs/
+#      - static_value:/var/html/static/
+#      - media_value:/var/html/media/
+#    depends_on:
+#      - frontend
+#
+#volumes:
+#  static_value:
+#  media_value:
