--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -16,10 +16,13 @@ server {
         proxy_set_header        X-Real-IP $remote_addr;
         proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header        X-Forwarded-Proto $scheme;
-        proxy_pass http://host.docker.internal:8000;
+        proxy_pass http://backend:8000;
     }
     location /admin/ {
-        proxy_pass http://host.docker.internal:8000/admin/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Forwarded-Host $host;
+        proxy_set_header X-Forwarded-Server $host;
+        proxy_pass http://backend:8000/admin/;
     }
     location /api/docs/ {
         root /usr/share/nginx/html;
