--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -1,32 +1,44 @@
 server {
     listen 80;
-    server_name 51.250.100.36 localhost;
     server_tokens off;
+    client_max_body_size 8M;
+    server_name 127.0.0.1;
+
+    location /static/recipes/ {
+        root /var/html/;
+    }
+
+    location /media/recipes/ {
+        root /var/html/;
+    }
+
     location /static/admin/ {
         root /var/html/;
     }
+
     location /static/rest_framework/ {
         root /var/html/;
     }
-    location /media/ {
-        root /var/html/;
-    }
+
     location /api/ {
+        proxy_pass http://backend:8000;
         proxy_set_header        Host $host;
         proxy_set_header        X-Real-IP $remote_addr;
         proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header        X-Forwarded-Proto $scheme;
-        proxy_pass http://backend:8000;
     }
+
     location /admin/ {
-        proxy_set_header Host $host;
-        proxy_set_header X-Forwarded-Host $host;
-        proxy_set_header X-Forwarded-Server $host;
         proxy_pass http://backend:8000/admin/;
+        proxy_set_header        Host $host;
+        proxy_set_header        X-Real-IP $remote_addr;
+        proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header        X-Forwarded-Proto $scheme;
     }
+
     location /api/docs/ {
         root /usr/share/nginx/html;
-        try_files $uri $uri/redoc.html $uri/swagger.html;
+        try_files $uri $uri/redoc.html;
     }
     location / {
         root /usr/share/nginx/html;
@@ -41,4 +53,5 @@ server {
       location = /50x.html {
         root   /var/html/frontend/;
       }
+
 }
